# Illness-project

./: CMakeLists.txt  Diseases.cpp  Diseases.h  idea.txt  main.cc  test.cpp
